Fix navbar overlap issue

--- a/src/components/MainPicStyles.css
+++ b/src/components/MainPicStyles.css
@@ -6,7 +6,47 @@
 .headshot{
     width: 50%;
     height: 50%;
-    background-size: cover;
-    background-position: center;
-    object-fit: fill;
+    bottom: 50%;
+    margin-top: 50px;
+    justify-content: left;
+    align-items: left;
+}
+
+.mask::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.Main{
+    height: 100%;
+    width: 100%;
+}
+
+.Main .description{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 60%;
+    text-align: center;
+}
+
+.Main .description p{
+    font-size: 4rem;
+    padding: 0.6rem 0 1.5rem;
+}
+/* Fix overlap issue */
+@media screen and (max-width: 640px){
+
+    .headshot{
+        display: none;
+    }
+    
+    .Main .description p{
+        font-size: 1.4rem;
+        display: none;
+    }
+    
 }
