--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -3,7 +3,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    position: fixed;
+    width: 100%;
+    height: 90px;
+    z-index: 10;
 }
+*, *:before, *:after 
+{ box-sizing: border-box; }
 .nav-menu{
     display: flex;
 }
@@ -27,6 +33,7 @@
         align-items: center;
         width: 100%;
         height: 100vh;
+        background-color: black;
         position:absolute;
         top: 0;
         left: -100%;
